# vulkanMaze

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  imgui.ini  vcpkg.json
.cache/clangd/index/: Maze.cpp.0FD1F1170D6A5DEA.idx  Maze.hpp.B1A40C5ED224EDF8.idx  engine.cpp.882B7D145BF2E1D7.idx  engine.hpp.4107615D528CFCAA.idx  main.cpp.3D7FF46B7224EBFB.idx  maze.cpp.AAE66425DCC49428.idx
include/: engine.hpp  pch.hpp
include/vkMaze/: Buffers.hpp  Camera.hpp  Descriptors.hpp  FrameData.hpp  GraphicsPipeline.hpp  Images.hpp  Maze.hpp  Pipelines.hpp  Records.hpp  Shapes.hpp  UBOs.hpp  Util.hpp  VulkanContext.hpp  VulkanEngine.hpp  engine.hpp
include/vkMaze/Components/: Buffers.hpp  Descriptors.hpp  EngineConfig.hpp  FrameData.hpp  Helpers.hpp  Images.hpp  Imgui.hpp  Managers.hpp  RenderGraph.hpp  RenderPass.hpp  Shadows.hpp  Spirv.hpp  Swapchain.hpp  VulkanContext.hpp  VulkanEngine.hpp  Window.hpp
include/vkMaze/Objects/: Camera.hpp  Material.hpp  Pipelines.hpp  PostProcessingPass.hpp  Shapes.hpp  UBOs.hpp  Vertex.hpp
shaders/: shader.spv
src/: Buffers.cpp  Descriptors.cpp  FrameData.cpp  GraphicsPipeline.cpp  Helpers.cpp  Images.cpp  Imgui.cpp  Managers.cpp  Material.cpp  Maze.cpp  Mesh.cpp  Pipelines.cpp  Platonics.cpp  PostProcessingPass.cpp  RenderGraph.cpp  RenderPass.cpp  Shadows.cpp  Spirv.cpp  Swapchain.cpp  VulkanContext.cpp  VulkanEngine.cpp  Window.cpp  engine.cpp  main.cpp  main.cpp.bak
src/shaders/: fragPhong.slang  fragUnlit.slang  shader.slang  unlit.slang  vertBasic.slang
src/shaders/post/: fragBasic.slang  fragBloom.slang  fragBoxBlur.slang  fragCombineImages.slang  fragGaussianBlurH.slang  fragGaussianBlurV.slang  fragSeperateBrightness.slang  vertPost.slang
src/shaders/post/pre/: fragShadowMapping.slang  vertShadowMapping.slang
